objects/JBCXM__SurveyParticipant__c.object
<CustomObject>
    <description>This is used to store survey participants</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>Survey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdvancedOutreachParticipantId__c</fullName>
        <description>Advanced Outreach participant id.</description>
        <label>Advanced Outreach Participant Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AnonymousTempUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous Temp User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__AnonymousTokenId__c</fullName>
        <formula>JBCXM__SurveyMaster__r.JBCXM__AnonymousTokenId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anonymous TokenId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRecordId__c</fullName>
        <label>Associated object record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CSTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The task used to send survey.</description>
        <label>CSTask</label>
        <referenceTo>JBCXM__CSTask__c</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>Survey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ContextMessage__c</fullName>
        <label>ContextMessage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ContextURL__c</fullName>
        <label>ContextURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JBCXM__DeliveryResponse__c</fullName>
        <label>Delivery Response</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayName__c</fullName>
        <description>Survey participant name.</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DoPartialSubmit__c</fullName>
        <description>Whether this participant&apos;s partially saved response is eligible for automatic submission or not.</description>
        <formula>IF(AND(ISPICKVAL(JBCXM__ResponseStatus__c,&quot;PARTIALLY_SAVED&quot;),OR(JBCXM__SurveyMaster__r.JBCXM__IsExpired__c,AND(NOT(ISBLANK(JBCXM__SurveyMaster__r.JBCXM__DaysToAutoSubmit__c)),NOT(ISBLANK(JBCXM__LastResponseRecordTime__c)),DATEVALUE(JBCXM__LastResponseRecordTime__c+JBCXM__SurveyMaster__r.JBCXM__DaysToAutoSubmit__c) &lt; Today()))),true,false)</formula>
        <label>Do Partial Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailOpenDate__c</fullName>
        <label>Email Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailOpenURL__c</fullName>
        <formula>JBCXM__SurveyMaster__r.JBCXM__EmailOpenURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailOpenURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailSentCount__c</fullName>
        <description>To know how many time you sent the survey to participant.</description>
        <label>Email Sent Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailSentDate__c</fullName>
        <label>Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Email__c</fullName>
        <formula>JBCXM__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__FirstName__c</fullName>
        <description>Participant first name.</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>Survey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>Survey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__InternalSubmissionBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal submission user</description>
        <label>Internally submitted by</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Survey internal submission user</relationshipLabel>
        <relationshipName>SurveyInternalResponseUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__InternalSubmissionDate__c</fullName>
        <label>Internal submission date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsInternallySubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is internally submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRespondedEventPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether responded event is published to event system.</description>
        <label>Is Responded Event Published.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Language Code</description>
        <label>Language</label>
        <referenceTo>JBCXM__GSLanguage__c</referenceTo>
        <relationshipLabel>Survey Response Language</relationshipLabel>
        <relationshipName>ResponseLanguage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastResponseRecordTime__c</fullName>
        <description>Time when last response was recorded.</description>
        <label>Last Response Record Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the user visit the survey page or not.</description>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__PartialResponse__c</fullName>
        <description>To store partially saved response.</description>
        <label>Partially Saved Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the scheduled distribution record was processed or not.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship Contact</description>
        <label>Relationship Contact</label>
        <referenceTo>JBCXM__GSRelationshipContacts__c</referenceTo>
        <relationshipLabel>Survey Participant</relationshipLabel>
        <relationshipName>SurveyParticipant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship</description>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>Survey Participant</relationshipLabel>
        <relationshipName>SurveyParticipant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ResponseDate__c</fullName>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__ResponseStatus__c</fullName>
        <description>Current status of the saved responses for this participant.This field differentiate between response submitted by user,saved by user and auto submission.</description>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>PARTIALLY_SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>PARTIALLY_SAVED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__ResponseURL__c</fullName>
        <description>URL to preview survey response.</description>
        <formula>IF((JBCXM__Responsed__c == true),HYPERLINK(LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390))+&apos;apex/JBCXM__SurveyResponse?mode=REPORT_PREVIEW&amp;surveyId=&apos;+JBCXM__SurveyMaster__c+&apos;&amp;pId=&apos;+Id, &apos;ResponseUrl&apos;),null)</formula>
        <label>Response URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Responsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the user respond to the survey or not.</description>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Role__c</fullName>
        <label>Role</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScheduledJobId__c</fullName>
        <description>To know in which job the participant was scheduled.</description>
        <label>Scheduled Job Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the distribution(contact) record  was scheduled or not.</description>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SentEmail__c</fullName>
        <label>SentEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JBCXM__Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether email was sent or not.</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyDistributionScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Distribution Schedule</label>
        <referenceTo>JBCXM__SurveyDistributionSchedule__c</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>Survey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyId__c</fullName>
        <description>To store the Survey Id</description>
        <formula>JBCXM__SurveyMaster__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SurveyId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Master</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>Survey Participants</relationshipLabel>
        <relationshipName>SurveyMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyOpenedDate__c</fullName>
        <label>Survey Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyOpened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyTitle__c</fullName>
        <formula>JBCXM__SurveyMaster__r.JBCXM__Title__c</formula>
        <label>Survey Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyURL__c</fullName>
        <description>To store the survey published URL</description>
        <formula>JBCXM__SurveyMaster__r.JBCXM__PublishedURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SurveyURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__TestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether participant is test user or not</description>
        <label>Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Token__c</fullName>
        <label>Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Undelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether mail was delivered successfully or not.</description>
        <label>Email Undelivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__UniqueParticipantKey__c</fullName>
        <description>This field contains unique key(surveyId_copilotParticipantId) for Copilot survey to avoid duplicate participant creation.</description>
        <externalId>true</externalId>
        <label>Unique Participant Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the user is unsubscribed for this survey.</description>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Participant</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__SurveyMaster__c</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__Contact__c</columns>
        <columns>JBCXM__Email__c</columns>
        <columns>JBCXM__SentEmail__c</columns>
        <columns>JBCXM__Role__c</columns>
        <columns>JBCXM__DeliveryResponse__c</columns>
        <columns>JBCXM__Scheduled__c</columns>
        <columns>JBCXM__Processed__c</columns>
        <columns>JBCXM__Sent__c</columns>
        <columns>JBCXM__Opened__c</columns>
        <columns>JBCXM__Responsed__c</columns>
        <columns>JBCXM__EmailSentCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SuP-{0000}</displayFormat>
        <label>Survey Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>